fix spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -141,6 +141,10 @@ nav .link {
   padding: 20px;
 }
 
+.social-icon-container {
+  padding-bottom: -20px;
+}
+
 .title {
   margin-bottom: 20px;
   color: nth($colors, 1);
